Fixed index.css file for align center with game board.

--- a/src/index.css
+++ b/src/index.css
@@ -13,23 +13,28 @@ ol, ul {
   display: table;
 }
 
+.gameboard {
+  display: flex;
+  justify-content: center;
+}
+
 .status {
   margin-bottom: 10px;
 }
 
 .square {
+  height: 10vw;
+  width: 10vw;
   background: #fff;
   border: 1px solid #999;
   float: left;
-  font-size: 24px;
+  font-size: 9vw;
   font-weight: bold;
   line-height: 34px;
-  height: 34px;
   margin-right: -1px;
   margin-top: -1px;
   padding: 0;
   text-align: center;
-  width: 34px;
 }
 
 .square:focus {
@@ -43,6 +48,7 @@ ol, ul {
 .game {
   display: flex;
   flex-direction: row;
+  justify-content: center;
 }
 
 .game-info {
